--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,14 +1,3 @@
-/* helpers */
-@import 'helpers/variables';
-@import 'helpers/functions';
-@import 'helpers/mixins';
-
-/* base */
-@import 'base/normalize';
-@import 'base/typography';
-
-/* vendors */
-@import 'vendors/bootstrap-grid.scss';
-
-/* pages */
-@import 'pages/home.scss';
+body {
+    background: #222;
+}
